--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@
             </td>
             <td style="padding:25px;width:55%;vertical-align:top">
               <p>
-                <papertitle>Spatialised Crop Growth modelling tool (in C#): a software tool to simulate dynamic processes of crop growth and tune with in-season information such as that from UAV </papertitle>
+                <papertitle>Spatialised Crop Growth modelling tool (in C#): a software tool to simulate dynamic processes of crop growth and tune with in-season information such as that from UAV images</papertitle>
               </p>
               <br>
               <br>
